force-app/main/default/objects/Trail_Module__c/fields/Estimated_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time__c</fullName>
    <formula>Module__r.Estimated_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>