force-app/main/default/objects/Trail_Module__c/validationRules/Active_Module_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Module_Required</fullName>
    <active>true</active>
    <description>This validation triggers when an unactive module tries to be added to a trail.</description>
    <errorConditionFormula>Module__r.Active__c = False</errorConditionFormula>
    <errorMessage>No se puede agregar un modulo inactivo a un trail.</errorMessage>
</ValidationRule>